add - doc - Added skeleton of contact editing info...
...box

---

We've added the skeleton of contact editing infobox. The rest of the
editing feature will be done soon.

---

Type: add
Breaking: False
Doc Required: True
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/Output/Localizations.ar.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/Output/Localizations.ar.resx
@@ -351,5 +351,11 @@
   <data name="NKS_CONTACTS_TUI_CONTACTNEWNAMEPROMPT" xml:space="preserve">
     <value>أدخل اسمًا جديدًا لهذه جهة الاتصال</value>
   </data>
+  <data name="NKS_CONTACTS_TUI_EXIT" xml:space="preserve">
+    <value>خروج</value>
+  </data>
+  <data name="NKS_CONTACTS_TUI_KEYBINDING_SAVE" xml:space="preserve">
+    <value>يحفظ</value>
+  </data>
 
 </root>
