--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ger.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ger.json
@@ -326,6 +326,14 @@
     {
       "loc": "NKS_CONTACTS_TUI_CONTACTNEWNAMEPROMPT",
       "text": "Geben Sie einen neuen Namen für diesen Kontakt ein"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_EXIT",
+      "text": "Ausgang"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_KEYBINDING_SAVE",
+      "text": "Speichern"
     }
   ]
 }
