--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/grk.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/grk.json
@@ -318,6 +318,14 @@
     {
       "loc": "NKS_CONTACTS_TUI_CONTACTNEWNAMEPROMPT",
       "text": "Εισαγάγετε νέο όνομα για αυτήν την επαφή"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_EXIT",
+      "text": "Εξοδος"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_KEYBINDING_SAVE",
+      "text": "Εκτός"
     }
   ]
 }
