--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/mal.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/mal.json
@@ -320,6 +320,14 @@
     {
       "loc": "NKS_CONTACTS_TUI_CONTACTNEWNAMEPROMPT",
       "text": "Masukkan nama baharu untuk kenalan ini"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_EXIT",
+      "text": "Keluar"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_KEYBINDING_SAVE",
+      "text": "Jimat"
     }
   ]
 }
