--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/spa.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/spa.json
@@ -342,6 +342,14 @@
     {
       "loc": "NKS_CONTACTS_TUI_CONTACTNEWNAMEPROMPT",
       "text": "Introduzca un nuevo nombre para este contacto"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_EXIT",
+      "text": "Salida"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_KEYBINDING_SAVE",
+      "text": "Ahorrar"
     }
   ]
 }
