--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ita.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ita.json
@@ -320,6 +320,14 @@
     {
       "loc": "NKS_CONTACTS_TUI_CONTACTNEWNAMEPROMPT",
       "text": "Inserisci un nuovo nome per questo contatto"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_EXIT",
+      "text": "Uscita"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_KEYBINDING_SAVE",
+      "text": "Salva"
     }
   ]
 }
