--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/nor.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/nor.json
@@ -321,6 +321,14 @@
     {
       "loc": "NKS_CONTACTS_TUI_CONTACTNEWNAMEPROMPT",
       "text": "Skriv inn nytt navn for denne kontakten"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_EXIT",
+      "text": "Gå"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_KEYBINDING_SAVE",
+      "text": "Spare"
     }
   ]
 }
