--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ptg.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ptg.json
@@ -327,6 +327,14 @@
     {
       "loc": "NKS_CONTACTS_TUI_CONTACTNEWNAMEPROMPT",
       "text": "Introduza um novo nome para este contacto"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_EXIT",
+      "text": "Saída"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_KEYBINDING_SAVE",
+      "text": "Guardar"
     }
   ]
 }
