add - doc - Added adding contact option
---

We've added a feature that allows you to add new contacts to the contact
manager through the contact manager TUI.

---

Type: add
Breaking: False
Doc Required: True
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/Output/Localizations.hi-Latn.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/Output/Localizations.hi-Latn.resx
@@ -357,5 +357,8 @@
   <data name="NKS_CONTACTS_TUI_KEYBINDING_SAVE" xml:space="preserve">
     <value>sahejen</value>
   </data>
+  <data name="NKS_CONTACTS_TUI_KEYBINDING_ADD" xml:space="preserve">
+    <value>joden</value>
+  </data>
 
 </root>
