--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/arb-T.json
@@ -351,6 +351,10 @@
     {
       "loc": "NKS_CONTACTS_TUI_KEYBINDING_SAVE",
       "text": "يحفظ"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_KEYBINDING_ADD",
+      "text": "يضيف"
     }
   ]
 }
