--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/eng.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/eng.json
@@ -431,6 +431,10 @@
     {
       "loc": "NKS_CONTACTS_TUI_KEYBINDING_SAVE",
       "text": "Save"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_KEYBINDING_ADD",
+      "text": "Add"
     }
   ]
 }
