--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ind-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ind-T.json
@@ -325,6 +325,10 @@
     {
       "loc": "NKS_CONTACTS_TUI_KEYBINDING_SAVE",
       "text": "बचाना"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_KEYBINDING_ADD",
+      "text": "जोड़ना"
     }
   ]
 }
