--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/kor-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/kor-T.json
@@ -326,6 +326,10 @@
     {
       "loc": "NKS_CONTACTS_TUI_KEYBINDING_SAVE",
       "text": "구하다"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_KEYBINDING_ADD",
+      "text": "추가하다"
     }
   ]
 }
