--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ptg.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ptg.json
@@ -335,6 +335,10 @@
     {
       "loc": "NKS_CONTACTS_TUI_KEYBINDING_SAVE",
       "text": "Guardar"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_KEYBINDING_ADD",
+      "text": "Adicionar"
     }
   ]
 }
