--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/fre.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/fre.json
@@ -371,6 +371,10 @@
     {
       "loc": "NKS_CONTACTS_TUI_KEYBINDING_SAVE",
       "text": "Sauvegarder"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_KEYBINDING_ADD",
+      "text": "Ajouter"
     }
   ]
 }
