--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ger.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ger.json
@@ -334,6 +334,10 @@
     {
       "loc": "NKS_CONTACTS_TUI_KEYBINDING_SAVE",
       "text": "Speichern"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_KEYBINDING_ADD",
+      "text": "Hinzufügen"
     }
   ]
 }
