--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ita.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ita.json
@@ -328,6 +328,10 @@
     {
       "loc": "NKS_CONTACTS_TUI_KEYBINDING_SAVE",
       "text": "Salva"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_KEYBINDING_ADD",
+      "text": "Aggiungere"
     }
   ]
 }
