--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/nor.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/nor.json
@@ -329,6 +329,10 @@
     {
       "loc": "NKS_CONTACTS_TUI_KEYBINDING_SAVE",
       "text": "Spare"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_KEYBINDING_ADD",
+      "text": "Legge til"
     }
   ]
 }
